[gd_scene load_steps=4 format=2]

[ext_resource path="res://CameraRoot.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 308.406, 200 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 308.904, 200 )

[node name="CameraRoot" type="Camera2D"]
zoom = Vector2( 0.6, 0.6 )
drag_margin_v_enabled = true
drag_margin_left = 1.0
drag_margin_top = 0.1
drag_margin_right = 1.0
drag_margin_bottom = 0.1
script = ExtResource( 1 )

[node name="Cam_X" type="Camera2D" parent="."]
position = Vector2( 305.363, 0 )
current = true
zoom = Vector2( 0.6, 0.6 )

[node name="CamX_Area2D" type="Area2D" parent="Cam_X"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cam_X/CamX_Area2D"]
shape = SubResource( 1 )

[node name="Cam_Z" type="Camera2D" parent="."]
position = Vector2( 923.363, 0 )
zoom = Vector2( 0.6, 0.6 )

[node name="CamZ_Area2D" type="Area2D" parent="Cam_Z"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cam_Z/CamZ_Area2D"]
shape = SubResource( 2 )

[connection signal="body_entered" from="Cam_X/CamX_Area2D" to="." method="_on_camX_area_entered"]
[connection signal="body_entered" from="Cam_Z/CamZ_Area2D" to="." method="_on_camZ_area_entered"]
